# GuardRail-Py

./: .gitignore  LICENSE  README.md  RULES.md  example_usage.py  pyproject.toml  requirements.txt  run_detector.py  test-results.xml  test_performance_issues.py  verify_all.py
.github/workflows/: python-app.yml
guardrail/: __init__.py  ast_parser.py  complexity_detector.py  secret_scanner.py
tests/: test_ast_parser.py  test_complexity_detector.py  test_secret_scanner.py
