[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "guardrail-py"
version = "0.1.0"
description = "AST-based code compliance and security scanner for Python"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Joshua Oleru" }
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "pytest",
    "pytest-cov",
    "pytest-xdist"
]

[tool.setuptools.packages.find]
where = ["."]
